<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_white"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_star"
        android:icon="@drawable/ic_star_white"
        android:title="@string/title_star" />

    <item
        android:id="@+id/navigation_drink"
        android:icon="@drawable/ic_drink_white"
        android:title="@string/title_drink" />
    <item
        android:id="@+id/navigation_heart"
        android:icon="@drawable/ic_heart_white"
        android:title="@string/title_heart" />

    <item
        android:id="@+id/navigation_person"
        android:icon="@drawable/ic_person_white"
        android:title="@string/title_person" />




</menu>
